# plugin-test

./: .gitignore  CMakeLists.txt  dso.cpp  dso.hpp  export.h  main.cpp  plugin.cpp  plugin_common.h
plugins/: cat.c  hello.cpp  plugin.cpp
